- Fix security manager bug under Windows. Please confirm it does not create   problems under Unix.
git-svn-id: https://svn.apache.org/repos/asf/tomcat@287423 13f79535-47bb-0310-9956-ffa450edef68